2004-08-28  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/tutorial.itely: minor editing.

	* Documentation/user/examples.itely: tiny editing.

2004-08-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/advanced.itely: removed.

	* Documentation/user/programming-interface.itely (How markups work
	internally): new subsection.

	* Documentation/user/converters.itely (Invoking abc2ly): remove
	musedata2ly.

2004-08-27  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* Documentation/user/point-and-click.texi (Point and click): new file.
	put point & click in appendix.
	
	* Documentation/user/changing-defaults.itely (Vertical spacing):
	corrections

2004-08-27  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/introduction.itely: add note about the "example templates"
	section of the manual, and remove link to input/template/

2004-08-27  Juergen Reuter   <reuter@ipd.uka.de>

	* Documentation/user/lilypond-book.itely: fix parse error: @LaTeX
	-> La@TeX

	* mf/parmesan-heads.mf: draw_diamond_head: fixed pen width; added
	missing lneo_mensural head; editorial cleanups

	* lily/mensural-ligature.cc: added more comments

2004-08-26  Graham Percival  <gperlist@shaw.ca>

	* Documentation/user/examples.itely: second, third, fourth, and fifth sections added.

	* input/template/{various}: removed files included in examples.itely.

2004-08-26  Juergen Reuter   <reuter@ipd.uka.de>

	* lily/stem.cc: bugfix: adjust-if-on-staffline: use
	Stem::stem_end_position instead of broken
	Staff_symbol_referencer::get_position

2004-08-26  Han-Wen Nienhuys   <hanwen@xs4all.nl>

	* debian/changelog: debian patch by Anthony Fok.

	* lily/stem.cc (flag): bugfix for mensural flags (thanks Juergen!)

	* lily/slur-engraver.cc (try_music): ignore slurs_. Otherwise we
	get spurious messages with skipTypesetting on.

2004-08-25  Graham Percival   <gperlist@shaw.ca>

	* Documentation/user/lilypond-book.itely: slight clean-up.
