@@ -6,6 +6,12 @@
 
 2004-08-28  Han-Wen Nienhuys   <hanwen@xs4all.nl>
 
+	* lily/slur-quanting.cc (init_score_param): read scoring
+	parameters from slur-details property
+
+	* scm/define-grobs.scm (all-grob-descriptions): add inside-slur to
+	Accidental
+
 	* Documentation/user/advanced.itely: removed.
 
 	* Documentation/user/programming-interface.itely (How markups work
